# airflow-provider-datarobot

./: .flake8  .gitignore  .licenserc.yaml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CODEOWNERS  LICENSE  Makefile  README.md  build_publish_early_access.yaml  docker  early_access_dunder_init.txt  pipelineController.yaml  pyproject.toml  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.py  setup_common.py  setup_early_access.py  setup_major.py  setup_weekly.py
.cicd/: test.groovy  unit_test.groovy
.github/: pull_request_template.md
.harness/: black-pylint-on-PR.yaml  branch_ci_checks_input_set.yaml  build_and_publish_early_access_pypi.yaml  build_and_publish_pipy.yaml  build_and_publish_pipy_early_access.yaml  buildandpublishpipy.yaml  ci_checks_main_trigger.yaml  ci_checks_pr_trigger.yaml  cichecks.yaml  createreleasepr.yaml  createreleasetag.yaml  default_ci_checks_input_set.yaml  default_input_set.yaml  default_unit_tests_input_set.yaml  dummytestpipeline.yaml  lint_check.yaml  release_early_access_pypi.yaml  release_early_access_trigger.yaml  release_pypi.yaml  unit_tests.yaml
.harness/input_sets/: release_early_access_pypi.yaml  test_release_early_access_pypi.yaml
.harness/templates/: lint.yaml  publish_early_access_to_pypi_or_testpypi.yaml  publish_to_pypi_or_testpypi.yaml  unit_tests.yaml  validate_commit_sha_1.yaml  validate_release_version_tag_1.yaml
datarobot_provider/: __init__.py  _setup.py  _version.py  constants.py
datarobot_provider/_experimental/: __init__.py
datarobot_provider/autogen/: generate_operator.py  whitelist.yaml
datarobot_provider/example_dags/: advanced_datarobot_pipeline_jdbc_dag.py  csv_upload_wrangle_train_dag.py  custom_function_dag.py  custom_function_example.py  dataprep_wrangler_autopilot.py  datarobot_autopilot_options_pipeline_dag.py  datarobot_aws_s3_batch_scoring_dag.py  datarobot_azure_storage_batch_scoring_dag.py  datarobot_batch_monitoring_job_dag.py  datarobot_batch_scoring_templated_dag.py  datarobot_bigquery_batch_scoring_dag.py  datarobot_create_execution_environment_dag.py  datarobot_create_project_from_ai_catalog_dag.py  datarobot_create_project_from_dataset_version_dag.py  datarobot_custom_job_dag.py  datarobot_custom_model_pipeline_dag.py  datarobot_custom_partitioning_pipeline_dag.py  datarobot_dataset_new_version_dag.py  datarobot_dataset_upload_create_project_dag.py  datarobot_dataset_upload_dag.py  datarobot_datetime_partitioning_pipeline_dag.py  datarobot_external_model_pipeline_dag.py  datarobot_feature_discovery_pipeline_dag.py  datarobot_gcp_storage_batch_scoring_dag.py  datarobot_get_credentials_dag.py  datarobot_get_datastore_dag.py  datarobot_jdbc_batch_scoring_dag.py  datarobot_jdbc_dataset_dag.py  datarobot_jdbc_dynamic_dataset_dag.py  datarobot_pipeline_dag.py  datarobot_pipeline_manual_dag.py  datarobot_replace_custom_model_pipeline_dag.py  datarobot_run_notebook.py  datarobot_run_notebook_e2e.py  datarobot_score_dag.py  datarobot_timeseries_pipeline_dag.py  datarobot_upload_actuals_ai_catalog_dag.py  datarobot_upload_actuals_catalog_dag.py  db_wrangle.py  deployment_activate_deactivate_dag.py  (+22 more)
datarobot_provider/hooks/: connections.py  credentials.py  datarobot.py
datarobot_provider/operators/: ai_catalog.py  autopilot.py  base_datarobot_operator.py  bias_and_fairness.py  connections.py  credentials.py  custom_function.py  custom_job.py  custom_jobs.py  custom_models.py  data_prep.py  data_registry.py  datarobot.py  deployment.py  execution_environment.py  external_deployment.py  feature_discovery.py  mlops.py  model_insights.py  model_package.py  model_predictions.py  model_registry.py  model_training.py  monitoring.py  monitoring_job.py  notebook.py  partitioning.py  prediction_explanations.py  predictions.py  project.py  queue.py  scoring_code.py  segment_analysis.py  segmentation.py
datarobot_provider/sensors/: client.py  datarobot.py  model_insights.py  model_training.py  monitoring_job.py  notebook.py  predictions.py
docs/: Makefile  conf.py  index.md  jupyter_template_for_flake8.tpl  latex_preamble.tex  make.bat  spelling_wordlist.txt  version.py
docs/_html/: robots.txt
docs/_templates/: breadcrumbs.html
docs/autodoc/: api_reference.md  operators_datarobot.md  operators_insights.md  operators_project_use_case.md
docs/autodoc_operators/: api_reference.md  operators_ai_catalog.md  operators_autopilot.md  operators_bias_and_fairness.md  operators_connections.md  operators_custom_function.md  operators_data_prep.md  operators_data_registry.md  operators_feature_discovery.md  operators_insights.md  operators_model_training.md  operators_notebook.md  operators_predictions.md  operators_project_use_case.md  operators_queue.md  operators_segmentation.md
docs/autodoc_sensors/: api_reference.md  (+4 more)
jenkins/: build_and_publish.groovy  build_and_publish_pypi.groovy  build_and_publish_testpypi.groovy  publish_python_testpypi.groovy  style_check.groovy  unit_test.groovy
scripts/: test_development_container.sh
tests/: conftest.py
(+127 files in other folders)
