[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[project.entry-points."apache_airflow_provider"]
#provider_info = "datarobot_provider.__init__:get_provider_info"

[tool.ruff]
# General settings
line-length = 100
target-version = "py312"

# Extend default excludes (based on Flake8 configuration)
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Rules to select (corresponds to Flake8's select)
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "I",
    "AIR",
    "C90",
]

# Rules to ignore (corresponds to Flake8's ignore)
ignore = [
    "E501",  # Line length handled by `line-length` setting
    "C408",  # Unnecessary `dict()` call (rewrite as a literal)
    "B018",  # Found useless expression. Either assign it to a variable or remove it.
    "C901",  # Method is too complex
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.12
enable_error_code = "ignore-without-code"
ignore_missing_imports = true
follow_imports_for_stubs = true
no_implicit_optional = true
show_column_numbers = true
warn_redundant_casts = true
# warn_return_any = true  # TODO: Enable this check
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
