[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# General settings
line-length = 100
target-version = "py312"

# Extend default excludes (based on Flake8 configuration)
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Rules to select (corresponds to Flake8's select)
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "I",
    "AIR",
    "C90",
]

# Rules to ignore (corresponds to Flake8's ignore)
ignore = [
    "E501",  # Line length handled by `line-length` setting
    "C408",  # Unnecessary `dict()` call (rewrite as a literal)
    "B018",  # Found useless expression. Either assign it to a variable or remove it.
    "C901",  # Method is too complex
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.12
# check_untyped_defs = true  # TODO: Enable this check
# disallow_any_generics = true  # TODO: Enable this check
disallow_incomplete_defs = true
disallow_subclassing_any = true
# disallow_untyped_calls = true  # TODO: Enable this check
disallow_untyped_decorators = true
# disallow_untyped_defs = true  # TODO: Enable this check
enable_error_code = "ignore-without-code"
ignore_missing_imports = true
follow_imports_for_stubs = true
no_implicit_optional = true
show_column_numbers = true
warn_redundant_casts = true
# warn_return_any = true  # TODO: Enable this check
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "datarobot_provider.autogen.*",
    "datarobot_provider._experimental.deprecated_example_dags.*"
]
ignore_errors = true
